<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntraDroid</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_token">Token</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_planning">Planning</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_header">Header</string>
    <string name="title_activity_rapport">User Info</string>
    <string name="action_settings">Settings</string>

    <string name="category_name">Intranet</string>
    <string name="search_hint">Search</string>
    <string name="title_log">Netsoul Log</string>
    <string name="title_msg">Messages</string>
    <string name="time_active">Time active : </string>
    <string name="time_idle">Time idle : </string>
    <string name="time_out">Time out active : </string>
    <string name="time_out_idle">Time out idle : </string>
    <string name="time_off">Time off : </string>
    <string name="time_log">Log time : </string>
    <string name="title_token">Enter your token</string>
    <string name="text_token">Please enter your token :</string>
    <string name="empty_token">00000000</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="credit">Credits : </string>
    <string name="gpa">G.P.A : </string>
    <string name="grades">Grades</string>
    <string name="filter">Filters</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password Unix</string>
    <string name="prompt_connect">Connect</string>
    <string name="modules_title">Modules</string>
    <string name="grade_title">Grades</string>

    <string-array name="items_menu">
        <item>Home</item>
        <item>Marks</item>
        <item>Modules</item>
        <item>Planning</item>
    </string-array>

</resources>
