<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.intradroid.dt.intradroid.MainActivity">

    <TextView
        android:background="@color/epitech_blue"
        android:layout_height="@dimen/title_height"
        android:layout_width="match_parent"
        android:padding="@dimen/token_title_padding"
        android:text="@string/title_token"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/token_marge"
        android:layout_width="match_parent"
        android:padding="@dimen/token_marge"
        android:text="@string/text_token"
        android:textColor="@color/epitech_grey"
        android:textSize="@dimen/token_text_size"/>
    <EditText
        android:hint="@string/empty_token"
        android:layout_height="@dimen/title_height"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:padding="@dimen/token_marge"
        android:inputType="number"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:background="@color/epitech_blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="@dimen/token_padding"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:padding="@dimen/none"
            android:text="@string/cancel"
            android:textColor="@color/white"/>
        <Button
            android:background="@color/epitech_blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="@dimen/token_padding"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>